# yadro_pc_club

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: main.cpp
include/: bimap-base.h  bimap-element.h  bimap-iterator.h  bimap.h  event_processor.h
src/: event_processor.cpp
test/: event_processor_test.cpp
